--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body style="background-color: rgb(35, 57, 79);">
-
-<h1 class="flex justify-center text-8xl font-extrabold leading-none tracking-tight text-gray-900 md:text-10xl lg:text-28xl dark:text-white">Hit mole</h1>
-
+<h1 class="flex flex-col items-center text-8xl font-extrabold leading-none tracking-tight text-gray-900 md:text-10xl lg:text-28xl dark:text-white">Hit mole</h1>
+  <button id = "state" class="mt-0 px-4 py-1 text-4xl">▶️</button>
+  <button id = "reset" class="mt-0 px-4 py-1 text-4xl">🔄</button>
 <div class="flex justify-center items-center h-screen gap-2 space-x-8">
   <div><img src="dirt.svg" /></div>
   <div><img src="dirt.svg" /></div>
@@ -23,5 +23,6 @@
 <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
+
 
 
