--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   <div><img src="dirt.svg" /></div>
   <div><img src="dirt.svg" /></div>
 </div>
-<script src = script.js> </script>
+<script src="script.js"> </script>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
+
 
 
 
